Fix issues #110, #133 - Message and notification wrapping
- Set right margin for notifications so it won't overwrite timestamp
- Increase width of timestamp to work on OSX

--- a/JabbR/Chat.css
+++ b/JabbR/Chat.css
@@ -252,6 +252,10 @@ li.room:hover {
     padding: 5px;
 }
 
+.notification .content {
+    margin-right: 95px;
+}
+
 .message {
     border-bottom: 1px solid #eee;
 }
@@ -272,7 +276,7 @@ li.room:hover {
 }
 
 .message .middle {
-    margin-right: 85px;
+    margin-right: 95px;
     padding: 5px;
     word-wrap: break-word;
 }
@@ -282,7 +286,7 @@ li.room:hover {
     padding: 5px;
     top: 0px;
     right: 0px;
-    width: 75px;
+    width: 85px;
 }
 
 .messages li .right .time {
